Update 't2i3t4vq6-python' component image to: quay.io/rhtap_qe/rhtap-qe:4f77c93212cd139faa4cacb6c860ab872a0bd097@sha256:fd1efdbed918eeb169093745fba6b23ab2e24aeb1802b8232bad25e1f756814d

--- a/components/t2i3t4vq6-python/overlays/development/deployment-patch.yaml
+++ b/components/t2i3t4vq6-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: t2i3t4vq6-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:4f77c93212cd139faa4cacb6c860ab872a0bd097@sha256:fd1efdbed918eeb169093745fba6b23ab2e24aeb1802b8232bad25e1f756814d
+          name: container-image
